<resources>
    <string name="app_name">ScannerController</string>
    <string name="version">Version：</string>
    <string name="sw_version">Software Version:</string>
    <string name="hw_version">Hardware Version:</string>
    <string name="api_version">API Version:</string>
    <string name="connect">Connect</string>
    <string name="reconnect">Auto Reconnect</string>
    <string name="status">Status</string>
    <string name="config">Config</string>
    <string name="log">Log</string>
    <string name="femto">Femto</string>
    <string name="reboot">Reboot</string>
    <string name="test">Test</string>
    <string name="ip_address">IP:</string>
    <string name="system">System</string>
    <string name="error_notify">Error Notify</string>
    <string name="tech">Tech：</string>
    <string name="band">Band：</string>
    <string name="channel">Channel：</string>

    <string name="add_values">Add values to the chart</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="add">Add</string>
    <string name="new_series">New series</string>
    <string name="Scan">Scan</string>
    <string name="Broadcast">Start Broadcast</string>
    <string name="title_activity_sib_list_">SibList_Activity</string>
    <string name="title_activity_target_list">TargetListActivity</string>

    <!-- 登录界面 -->
    <string name="account_input_hint">account</string>
    <string name="password_input_hint">password</string>
    <string name="login">Login</string>

    <!-- ToolBar -->
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- FemtoList -->
    <string name="femto_list">Femto List</string>
    <string name="manual_connect_femto">Manual Connect Femto</string>
    <string name="femto_list_ip_address">IP Address :</string>
    <string name="femto_list_port">Port :</string>
    <string name="femto_list_connect">Connect</string>
    <string name="femto_list_point">•</string>
    <string name="title_activity_automatic_test">AutomaticTestActivity</string>

    <!-- ErrorMsg -->
    <string name="error_msg">Error Message</string>
    <string name="ignore">Ignore</string>
    <string name="attention">Attention</string>
    <string name="title_activity_ttsetting">TTSettingActivity</string>

    <!--TUKTUK-->
    <string name="bootmode">Mode：</string>
    <string name="tts_switch">TTS Switch:</string>
    <string name="tt_signal">No Signal</string>
    <string name="serial_number">Serial Number:</string>
    <string name="ex_sw_version">Extend Software Version:</string>
</resources>
