<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:lh2="http://schemas.android.com/tools"
    android:focusable="false"
    android:background="@android:color/white"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@mipmap/fragment_title_bg">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/tt_connect_status"
                android:src="@drawable/icon_conn_default"
                android:layout_width="35dp"
                android:layout_height="25dp"
                android:layout_marginLeft="10dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:paddingLeft="9dp"
                android:paddingRight="9dp"
                />
            <TextView
                android:layout_toRightOf="@id/tt_connect_status"
                android:id="@+id/tt_mac_address"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/colorHalfWhite"/>
            <ImageView
                android:id="@+id/tt_battery"
                android:layout_width="30dp"
                android:layout_height="15dp"
                android:layout_toLeftOf="@+id/tt_tv_battery"
                />
            <TextView
                android:id="@+id/tt_tv_battery"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/colorHalfWhite"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <!--title-->
        <include layout="@layout/normal_title_layout"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/tt_init"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            >
            <ProgressBar
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginRight="18dp"
                android:indeterminateDrawable="@anim/progress_bar_anim"
                android:indeterminateDuration="1000"
                />
            <TextView
                android:id="@+id/progress_dialog_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Initialise..."
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textColor="#444444"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--band tech channel-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size_16"
                    android:text="@string/tech"
                    android:layout_weight="1"
                    android:textColor="@color/colorItemText"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size_16"
                    android:text="@string/band"
                    android:layout_weight="1"
                    android:textColor="@color/colorItemText"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size_16"
                    android:textColor="@color/colorItemText"
                    android:text="@string/channel"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <!--tech-->
                <Spinner
                    android:id="@+id/tt_tech"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:entries="@array/tt_tech"
                    ></Spinner>
                <!--band-->
                <Spinner
                    android:id="@+id/tt_band"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    ></Spinner>
                <!--channel-->
                <EditText
                    android:id="@+id/tt_channel"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="@color/colorItemText"
                    android:maxLength="5"
                    android:cursorVisible="false"/>
            </LinearLayout>
        </LinearLayout>
        <!--signal-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">
            <com.bravo.BlueTooth.CircleProgressBar
                android:id="@+id/circleProgressBar"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                lh2:circleWidth="6dp"
                lh2:firstColor="#d3d3d3"
                lh2:secondColor="#3B95C8" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="bottom"
            android:paddingBottom="60dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size_16"
                    android:text="@string/tts_switch"
                    android:layout_weight="1"
                    android:textColor="@color/colorItemText"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size_16"
                    android:textColor="@color/colorItemText"
                    android:text="@string/bootmode"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <!--sound-->
                <Spinner
                    android:id="@+id/tt_sound"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:entries="@array/tt_sound"
                    ></Spinner>
                <!--bootmode-->
                <Spinner
                    android:id="@+id/tt_mode"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:entries="@array/tt_mode"
                    ></Spinner>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>