<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_activity_bg"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:fitsSystemWindows="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <!--pixcell icon-->
        <ImageView
            android:layout_width="126dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:background="@mipmap/login_pixcell_icon" />
        <!-- aacount-->
        <LinearLayout
            android:layout_marginTop="60dp"
            android:layout_width="320dp"
            android:layout_height="51dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:background="@mipmap/login_edittext"
            >
            <EditText
                android:id="@+id/et_account"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@mipmap/login_account_icon"
                android:gravity="center_vertical"
                android:hint="@string/account_input_hint"
                android:singleLine="true"
                android:layout_gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:drawablePadding="13dp"
                android:textSize="@dimen/font_size_16"
                android:textColor="#EFEFEF"
                android:textColorHint="@color/colorHalfMainTheme"
                android:background="@null"
                />
            <ImageView
                android:id="@+id/iv_account_clear"
                android:layout_gravity="center"
                android:layout_width="21dp"
                android:layout_height="21dp"
                android:layout_marginRight="10dp"
                android:visibility="gone"
                android:src="@drawable/btn_delete_selector"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="320dp"
            android:layout_height="51dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:background="@mipmap/login_edittext"
            >
            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@mipmap/login_password_icon"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:hint="@string/password_input_hint"
                android:paddingLeft="20dp"
                android:singleLine="true"
                android:inputType="textPassword"
                android:drawablePadding="13dp"
                android:textSize="@dimen/font_size_16"
                android:textColor="#EFEFEF"
                android:textColorHint="@color/colorHalfMainTheme"
                android:background="@null"
                />
            <ImageView
                android:id="@+id/iv_password_clear"
                android:layout_gravity="center"
                android:layout_width="21dp"
                android:layout_height="21dp"
                android:layout_marginRight="10dp"
                android:visibility="gone"
                android:src="@drawable/btn_delete_selector"/>
        </LinearLayout>


        <Button
            android:id="@+id/btn_login"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/btn_login_selector"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textSize="@dimen/font_size_16"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_14"
            android:text=""
            android:textColor="@android:color/white"
            android:layout_marginLeft="3dp"
            android:textStyle="bold"/>
    </LinearLayout>
</RelativeLayout>