<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="false"
    android:background="@android:color/white"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@mipmap/fragment_title_bg">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tt_mac_address"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/colorHalfWhite"/>
            <ImageView
                android:id="@+id/tt_battery"
                android:layout_width="30dp"
                android:layout_height="15dp"
                android:layout_toLeftOf="@+id/tt_tv_battery"
                />
            <TextView
                android:id="@+id/tt_tv_battery"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/colorHalfWhite"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <!--title-->
        <include layout="@layout/normal_title_layout"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!--Low freq-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_heigh"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="49.7dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/font_size_16"
                    android:text="Low freq.calibration:"
                    android:textColor="@color/colorItemText"
                    android:gravity="center_vertical"
                    android:layout_weight="1"/>
                <Spinner
                    android:id="@+id/tt_low"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:entries="@array/tt_low"
                    ></Spinner>
            </LinearLayout>
            <View
                android:layout_alignParentBottom="true"
                android:background="@color/colorItemLine"
                android:layout_width="match_parent"
                android:layout_height="0.3dp"/>
        </LinearLayout>
        <!--High freq-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_heigh"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_16"
                    android:text="High freq.calibration:"
                android:layout_weight="1"
                android:textColor="@color/colorItemText"/>
            <Spinner
                android:id="@+id/tt_high"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:entries="@array/tt_low"
                ></Spinner>
        </LinearLayout>
        <View
            android:layout_alignParentBottom="true"
            android:background="@color/colorItemLine"
            android:layout_width="match_parent"
            android:layout_height="0.3dp"/>
        <!--channels-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_heigh"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_16"
                android:text="TXCO:"
                android:textColor="@color/colorItemText"
                android:layout_weight="1"/>
            <Spinner
                android:id="@+id/tt_txco"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:entries="@array/tt_txco"
                ></Spinner>
        </LinearLayout>
        <View
            android:layout_alignParentBottom="true"
            android:background="@color/colorItemLine"
            android:layout_width="match_parent"
            android:layout_height="0.3dp"/>
        <!--antenna port-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_heigh"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_16"
                android:textColor="@color/colorItemText"
                android:text="AVG:"
                android:layout_weight="1"/>
            <Spinner
                android:id="@+id/tt_avg"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:entries="@array/tt_avg"
                ></Spinner>
        </LinearLayout>
        <View
            android:layout_alignParentBottom="true"
            android:background="@color/colorItemLine"
            android:layout_width="match_parent"
            android:layout_height="0.3dp"/>
        <!--HW ver-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_heigh"
            android:orientation="horizontal">
            <!--threshold-->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_16"
                android:text="@string/hw_version"
                android:textColor="@color/colorItemText"
                android:layout_gravity="center"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/tt_hw_ver"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_16"
                android:text="N/A"
                android:textColor="@color/colorItemText"
                android:layout_gravity="center"
                android:layout_weight="1"/>
        </LinearLayout>
        <View
            android:layout_alignParentBottom="true"
            android:background="@color/colorItemLine"
            android:layout_width="match_parent"
            android:layout_height="0.3dp"/>
        <!--SW ver-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_heigh"
            android:orientation="horizontal">
            <!--threshold-->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_16"
                android:text="@string/sw_version"
                android:textColor="@color/colorItemText"
                android:layout_gravity="center"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/tt_sw_ver"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_16"
                android:textColor="@color/colorItemText"
                android:layout_gravity="center"
                android:text="N/A"
                android:layout_weight="1"/>
        </LinearLayout>
        <View
            android:layout_alignParentBottom="true"
            android:background="@color/colorItemLine"
            android:layout_width="match_parent"
            android:layout_height="0.3dp"/>
        <!--extend SW ver-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_heigh"
            android:orientation="horizontal">
            <!--threshold-->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_16"
                android:text="@string/ex_sw_version"
                android:textColor="@color/colorItemText"
                android:layout_gravity="center"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/tt_ex_sw_ver"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_16"
                android:textColor="@color/colorItemText"
                android:layout_gravity="center"
                android:text="N/A"
                android:layout_weight="1"/>
        </LinearLayout>
        <View
            android:layout_alignParentBottom="true"
            android:background="@color/colorItemLine"
            android:layout_width="match_parent"
            android:layout_height="0.3dp"/>
        <!--serial number-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_heigh"
            android:orientation="horizontal">
            <!--threshold-->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_16"
                android:text="@string/serial_number"
                android:textColor="@color/colorItemText"
                android:layout_gravity="center"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/tt_serial_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_16"
                android:textColor="@color/colorItemText"
                android:layout_gravity="center"
                android:layout_weight="1"/>
        </LinearLayout>
</LinearLayout>
</LinearLayout>